2002-08-05  Maciej Stachowiak  <mjs@apple.com>

	fixed 2974993 - window.open does not return the right window object
	fixed 3017140 - WebKit creates a new KHTMLPart per page; should
	reuse it like KHTML does
	
        * WebView.subproj/WebHTMLRepresentation.m:
        (-[WebHTMLRepresentation setDataSource:]): Don't swap the part at
	this point. Now it gets reused.

2002-08-05  Maciej Stachowiak  <mjs@apple.com>

        * WebKit.pbproj/project.pbxproj: Fix tyops that broke Development
	build.

2002-08-05  Darin Adler  <darin@apple.com>

        * .cvsignore: Ignore WebCore-combined.exp.

2002-08-05  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3007072 - need to be able to build fat
	
        * WebKit.pbproj/project.pbxproj: Fixed DeploymentFat build.
        * Makefile.am: Build WebCore-combined.exp for Development and
	Mixed build.
        * WebKit-tests.exp: Added.
        * WebKit.exp: Remove test-only function.

2002-08-05  Darin Adler  <darin@apple.com>

	Do the wiring for the "text size multiplier" feature. The rest of the work will probably be done
	at the WebCore level.

        * WebCoreSupport.subproj/WebBridge.m: (-[WebBridge setFrame:]): Set the text size multiplier.
        * WebView.subproj/WebController.h:
        * WebView.subproj/WebController.m:
        (-[WebController setTextSizeMultiplier:]): Added. Calls _textSizeMultiplierChanged on the main frame.
        (-[WebController textSizeMultiplier]): Added.
        * WebView.subproj/WebControllerPrivate.h: Added textSizeMultiplier instance variable.
        * WebView.subproj/WebFramePrivate.h:
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _textSizeMultiplierChanged]): Added. Calls setTextSizeMultiplier: on the bridge,
	and _textSizeMultiplierChanged on all the child frames.

2002-08-05  Chris Blumenberg  <cblu@apple.com>

	Renamed icon loader delegate method to include the icon loader.

        * Misc.subproj/WebIconLoader.h:
        * Misc.subproj/WebIconLoader.m: